<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_encode"
            android:textAlignment="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
            android:id="@+id/encodeDecodeMessageFrameLayout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/message" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <EditText
                    android:id="@+id/messageToEncodeEditText"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:hint="@string/message_to_encode_hint"
                    android:inputType="text" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/decodedMessageTextView"
            android:text="@string/message_to_decode_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="45dp"
            tools:layout_editor_absoluteX="53dp"
            android:textSize="20sp"
            android:visibility="invisible"/>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <FrameLayout android:id="@+id/buttonsFrameLayout"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation" app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="8dp">

        <Button
            android:id="@+id/encodeButton"
            android:text="@string/encode_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/decodeButton"
            android:text="@string/decode_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/imageViewFrameLayout"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/encodeDecodeMessageFrameLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsFrameLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_photo_black_24dp"
                android:id="@+id/encodedImageView"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_photo_black_24dp"
                android:id="@+id/decodedImageView" android:visibility="invisible"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>